--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,6 @@
-{% if latest_question_list %}
+{% if question_list_latest %}
     <ul>
-    {% for question in latest_question_list %}
+    {% for question in question_list_latest %}
         <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
